# pokeapi-workspace

./: Cargo.toml  README.md
.github/workflows/: coverage.yml
crates/dominator-front-end/: .gitignore  Cargo.toml  package-lock.json  package.json  rollup.config.js
crates/dominator-front-end/src/: lib.rs
crates/pokeapi-cli/: Cargo.toml
crates/pokeapi-cli/src/: main.rs
crates/pokeapi-cli/tests/: cli_test.rs
crates/pokeapi-getters/: Cargo.toml  README.md
crates/pokeapi-getters/src/: get_ability.rs  get_pokemon.rs  lib.rs
crates/pokeapi-types/: Cargo.toml  README.md
crates/pokeapi-types/src/: ability.rs  common.rs  item.rs  lib.rs  pokemon.rs  pokemon_form.rs  version.rs
crates/rocket-pokeapi/: Cargo.toml
crates/rocket-pokeapi/src/: main.rs
pokeapi-getters/: Cargo.toml
pokeapi-getters/src/: get_pokemon.rs  lib.rs
pokeapi-types/: Cargo.toml
pokeapi-types/src/: lib.rs
