[package]
name = "pokeapi_types"
version = "0.1.0"
edition = "2018"
description = "a collection of structs used to aid in the creation of data from the PokeAPI service"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }